gcc/testsuite/rust/rustc/ui/macros/defined-later-issue-121061_dg.rs
fn main() {
    something_later!(); // { dg-error "" "" { target *-*-* } }
}

macro_rules! something_later {
    () => {
        println!("successfully expanded!");
    };
}

